# strangeloop2014

./: Cargo.toml  Makefile  README.md
schema/: image.capnp  strangeloop_include_generated.rs
src/: client.rs  server.rs
